# Multi-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  setup_google_oauth.py
backend/rag_data/: chroma.sqlite3
backend/scratch/: test_clear.py  test_gdocs.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  base_agent.py  code_review_agent.py  deployment_agent.py  developer_agent.py  documentation_agent.py  jira_agent.py  qa_agent.py  requirements_agent.py  security_agent.py  understanding_analyzer.py
backend/src/api/: __init__.py  review_routes.py  routes.py
backend/src/integrations/: __init__.py  github_client.py  google_docs_client.py  jira_client.py  llm_provider.py  rag_knowledge_base.py  slack_handler.py
backend/src/models/: __init__.py  project_state.py
backend/src/orchestrator/: __init__.py  orchestrator.py  pipeline_def.py  prd_review_service.py
backend/workspace/35309848/.state/: open_questions.md  pipeline_state.json  prd.md  project_doc_id.txt
backend/workspace/8e7f70df/.state/: open_questions.md  prd.md  project_doc_id.txt
backend/workspace/test_proj/.state/: project_doc_id.txt
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  data.ts  index.css  reviewApi.ts  types.ts
frontend/src/components/: ClientDashboard.tsx  DetailPanel.tsx  NewProjectView.tsx  PhaseNode.tsx  PipelineView.tsx  QuestionnaireSection.tsx  ReviewPage.tsx  Sidebar.tsx
