[project]
name = "aikyam-multi-agent"
version = "1.0.0"
description = "Aikyam Multi-Agent SDLC Pipeline — From raw requirements to production"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LLM / AI
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "openai>=1.40.0",

    # Integrations
    "slack-bolt>=1.18.0",
    "atlassian-python-api>=3.41.0",
    "PyGithub>=2.3.0",

    # Tools
    "openpyxl>=3.1.0",
    "gitpython>=3.1.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",

    # Database
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["."]

